# vulkan_test

./: Cargo.toml  build.rs
assets/scripts/sh/: shader_compile.sh
assets/shaders/: shader.frag
src/: main.rs  pipeline.rs  render_object.rs
